--- a/ecoreg_data_exploration.ipynb
+++ b/ecoreg_data_exploration.ipynb
@@ -528,7 +528,7 @@
     "\n",
     "*sites_and_ecol.xlsx* contains water chemistry and ecology data for each of the sites. This section focuses on the data in the *chemistry* sheet.\n",
     "\n",
-    "**NB:** The *chemistry* sheet includes duplicates for some location-time-determinand combinations. It looks as though some of the data has been enetered twice, but with slightly different values. For the preliminary analysis below, I'm simply ignoring these duplictes, but **this needs checking**.\n",
+    "**NB:** The *chemistry* sheet includes duplicates for some location-time-determinand combinations. It looks as though some of the data has been entered twice, but with slightly different values. For the preliminary analysis below, I'm simply ignoring these duplicates, but **this needs checking**.\n",
     "\n",
     "**NB2:** The original file contains lots of non-ASCII characters. For simplicity, it's probbaly worth removing these before any more detailed analysis, but for now I've just encoded the output using UTF-8.\n",
     "\n",
