--- a/ecoreg_data_exploration.ipynb
+++ b/ecoreg_data_exploration.ipynb
@@ -530,7 +530,7 @@
     "\n",
     "**NB:** The *chemistry* sheet includes duplicates for some location-time-determinand combinations. It looks as though some of the data has been entered twice, but with slightly different values. For the preliminary analysis below, I'm simply ignoring these duplicates, but **this needs checking**.\n",
     "\n",
-    "**NB2:** The original file contains lots of non-ASCII characters. For simplicity, it's probbaly worth removing these before any more detailed analysis, but for now I've just encoded the output using UTF-8.\n",
+    "**NB2:** The original file contains lots of non-ASCII characters. For simplicity, it's probaly worth removing these before any more detailed analysis, but for now I've just encoded the output using UTF-8.\n",
     "\n",
     "**NB3:** What does the *Kennung* column in the *chemistry* sheet refer to?"
    ]
@@ -841,7 +841,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is usual to define the hydrological year for year $x$ as as running from **October 1st** in year $(x - 1)$ to **September 30th** in year $x$. This means that the **Year** column in the data frame above is not quite right - *the median for October 1912 actually belongs to the 1913 hydrological year*. This can be corrected by shifting the years column back three steps and then forward-filling NaNs at the end of the series"
+    "It is usual to define the hydrological year for year $x$ as as running from **October 1st** in year $(x - 1)$ to **September 30th** in year $x$. This means the **Year** column in the data frame above is not quite right - *the median for October 1912 actually belongs to the 1913 hydrological year*. This can be corrected by shifting the years column back three steps and then forward-filling NaNs at the end of the series"
    ]
   },
   {
@@ -990,8 +990,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These results are very close - but not identical - to the ones estimated by the IHA software. The values in the data frame (*df*, above) are the same, and the medians are identical, but there is some disagreement in the 25th and 75th quartiles (and therefore in the CoD). It is the IHA software that is giving strange results: my code is consistent with both Excel and Access. Section 5.2 of the IHA software handbook staes that they are using the International Mathematical and Statistical\n",
-    "Library (IMSL) to estimate percentiles, and that this differes from other methods. I can't find a description of the ISML's approach, but for now I happy with the method I'm using, which seems pretty well-accepted.\n",
+    "These results are very close - but not identical - to the ones estimated by the IHA software. The values in the data frame (*df*, above) are the same, and the medians are identical, but there is some disagreement in the 25th and 75th quartiles (and therefore in the CoD). It is the IHA software that is giving strange results: my code is consistent with both Excel and Access. Section 5.2 of the IHA software handbook states that they are using the International Mathematical and Statistical\n",
+    "Library (IMSL) to estimate percentiles, and that this approach differs from other methods. I can't find a description of the ISML's approach, but for now I'm happy with the method I'm currently using, which seems pretty well-accepted.\n",
     "\n",
     "### 2.2. Group 2: Magnitude and duration (moving window operations)\n",
     "\n",
@@ -1103,9 +1103,9 @@
     "\n",
     "### 2.3. Group 3: Timing of annual extremes\n",
     "\n",
-    "This group of indicators comprises the day of the year (\"Julian day\") for the maximum and minimum average daily flow. These statistics are easy to calculate for each year, but direct averaging over multiple years gives rather arbitrary results. For example, if the maximum flow falls on December 31st in one year and January 2nd on another, the arithmetic average of these values should intuitively be January 1st. However, the basic methodology implemented by the IHA software implies an average of $\\frac{(366 + 2)}{2} = 184$, which is in July. To solve this, IHA applies lots of shifting and lagging to any calculations close to the year end (see section 5.3 of the [IHA manual](https://www.conservationgateway.org/ConservationPractices/Freshwater/EnvironmentalFlows/MethodsandTools/IndicatorsofHydrologicAlteration/Documents/IHAV7.pdf) for details), but this approach seems fairly arbitrary and doesn't necessarily produce consistent results.\n",
+    "This group of indicators comprises the day of the year (\"Julian day\") for the maximum and minimum average daily flow. These statistics are easy to calculate for each year, but direct averaging over multiple years gives rather arbitrary results. For example, if the maximum flow falls on December 31st in one year and January 2nd on another, the arithmetic average of these values should intuitively be January 1st. However, the basic methodology implemented by the IHA software implies an average of $\\frac{(366 + 2)}{2} = 184$, which is in July. To solve this, IHA applies lots of shifting and lagging to any calculations close to the year end (see section 5.3 of the [IHA manual](https://www.conservationgateway.org/ConservationPractices/Freshwater/EnvironmentalFlows/MethodsandTools/IndicatorsofHydrologicAlteration/Documents/IHAV7.pdf) for details), but this approach is fairly arbitrary and doesn't necessarily produce consistent results.\n",
     "\n",
-    "A better appraoch would be to use **[circular statistics](https://en.wikipedia.org/wiki/Mean_of_circular_quantities)**, which is implemented in [`scipy.stats.circmean`](http://docs.scipy.org/doc/scipy-0.17.0/reference/generated/scipy.stats.circmean.html)."
+    "A better appraoch would be to use **[circular statistics](https://en.wikipedia.org/wiki/Mean_of_circular_quantities)**, as is implemented in e.g. [`scipy.stats.circmean`](http://docs.scipy.org/doc/scipy-0.17.0/reference/generated/scipy.stats.circmean.html)."
    ]
   },
   {
@@ -1134,7 +1134,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This seems to work, so the it looks as though the IHA methodology could be improved by using `circmean`. This is implemented below."
+    "This seems to work, so the it looks as though the IHA methodology could be improved by using `circmean`. \n",
+    "\n",
+    "Before going any further with the Python implementation, we had a meeting which led to..."
    ]
   },
   {
@@ -1143,17 +1145,15 @@
    "source": [
     "## 3. R-interface\n",
     "\n",
-    "During the meeting on 02/05/2016, Jannicke found an [R package](http://deq2.bse.vt.edu/sifnwiki/index.php/R_iha) that implements the IHA methodology. This package is a little outdated and getting it installed with a recent version of R requires a bit of hacking. Once installed, however, it provides a reasonably simple way of performing the IHA calculations.\n",
+    "During the meeting on 02/05/2016, Jannicke found an [R package](http://deq2.bse.vt.edu/sifnwiki/index.php/R_iha) that implements the IHA calculations. This package is a little outdated and getting it installed with a recent version of R requires a bit of hacking. Once installed, however, it provides a reasonably simple way of estimating the IHA indicators.\n",
     "\n",
     "**NB:** Given the difficulties getting this installed on R, a Python verion may still be worth considering?\n",
     "\n",
-    "**NB2:** Despite the columns heading in the final output, the code below calculates **circular means** (not medians) for the group 3 indicators.\n",
-    "\n",
-    "The functions below take a Pandas df as input and perform each of the calculations in turn.\n",
+    "**NB2:** The code below calculates **circular means** (not medians) for the group 3 indicators.\n",
     "\n",
     "### 3.1. Read test data again\n",
     "\n",
-    "Start off again with the raw IHA test dataset, truncated to spand a whole number of water years."
+    "As an initial test of the R package, we'll start off again with the raw IHA dataset, truncated to span a whole number of water years."
    ]
   },
   {
@@ -1215,7 +1215,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2. Process data"
+    "### 3.2. Process data\n",
+    "\n",
+    "The code below is rather messy and could be **tidied up a lot**. This is just to test the link between Python and R with the IHA package."
    ]
   },
   {
@@ -1425,11 +1427,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are some minor issues with the code above (like the negative CoD in group 5). **These need correcting**, but for the moment they can be ignored while we move on to the German flow data.\n",
+    "Note that the values in the `Cent_Est` column above are based on **medians** where possible, but **means** for the group 3 indicators (calculated using circular statistics). There are also some minor issues with the values in the `CoD` column (e.g. negative numbers for some group 5 indicators). **These need correcting**, but first I'd like to experiment a little with the German flows data.\n",
     "\n",
     "### 3.3. Process German flows data\n",
     "\n",
-    "First, we need to re-run the code from above, but this time resampling to **daily** resolution rather than monthly. We'll **remove Stephansohl** from consideration for now as it has significant data gaps. Most of the other sites are complete (with minor data gaps) from **October 2003 until September 2011**, so we'll truncate all the series there in this analysis. All remaining data gaps have been filled using **linear interpolation**."
+    "To start, we need to re-run the code from the start of this notebook, but this time resampling to **daily** resolution rather than monthly. We'll **remove Stephansohl** from consideration for now as it has significant data gaps. Most of the other sites are complete (with only minor data gaps) from **October 2003 until September 2011**, so we'll truncate all the series there in this analysis. Any remaining data gaps will be filled using **linear interpolation**."
    ]
   },
   {
