--- a/ecoreg_prelim_analysis2.ipynb
+++ b/ecoreg_prelim_analysis2.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "## Analysis continued\n",
     "\n",
-    "I'm returning to this project after several months away. My [last notebook](http://nbviewer.jupyter.org/url/www.googledrive.com/host/0BximeC_RweaeVkYteXFqNE1XWXc/ecoreg_prelim_analysis.ipynb) carried out some preliminary analyses based on the IHA parameters and the PB and MZB scores calculated by Jannicke and Susi. I didn't get very far, but the analyses to date show that:\n",
+    "I'm returning to this project after several months away. My [last notebook](http://nbviewer.jupyter.org/github/JamesSample/ECOREG/blob/master/ecoreg_prelim_analysis.ipynb) carried out some preliminary analyses based on the IHA parameters and the PB and MZB scores calculated by Jannicke and Susi. I didn't get very far, but the analyses to date show that:\n",
     "\n",
     " * The IHA parameters estimated based upon 1 year of data are unreliable. More generally, the IHA methodology works best with complete water years, rather than with variable sampling dates like we have in this project. The IHA values I have already calculated using 5 years' worth of data are OK (because year boundary issues average out over longer periods), but **not all the German sites have 5 years' worth of data prior to sampling**, which is a problem. <br><br>\n",
     " \n",
@@ -32,7 +32,7 @@
     "\n",
     "## 1. New hydrological indicators\n",
     "\n",
-    "The code for the new hydrological indicators is quite long, so to avoid this document becoming too complicated I've moved it into a [separate notebook](https://nbviewer.jupyter.org/url/www.googledrive.com/host/0BximeC_RweaeVkYteXFqNE1XWXc/hydro_indicators_diy.ipynb). To begin with, I've calculated 35 hydrological indicators (HIs), all of which are fairly similar to the ones proposed by the IHA.\n",
+    "The code for the new hydrological indicators is quite long, so to avoid this document becoming too lengthy I've moved it into a [separate notebook](http://nbviewer.jupyter.org/github/JamesSample/ECOREG/blob/master/hydro_indicators_diy.ipynb). To begin with, I've calculated 35 hydrological indicators (HIs), all of which are fairly similar to the ones proposed by the IHA.\n",
     "\n",
     "### 1.1. Absolute or relative values?\n",
     "\n",
@@ -44,7 +44,7 @@
     " \n",
     "The problem with scaling everything to the mean is that we remove the stream size component from the flow data, but not from the ecological data. We therefore still have an ecological dataset reflecting stream size variability, but we've lost the corresponding signal from the flow data and have therefore reduced our ability to explain the response. \n",
     "\n",
-    "When it comes to PCA (and other dimensionality reduction techniques), it may ultimately be necessary to normalise the data. However, for the analysis presented here, I'd like to avoid this for as long as possible because results in \"real\" units are much easier to intepret from a physical perspective. Two possible alternatives for dealing with the stream size effect are:\n",
+    "When it comes to PCA (and other dimensionality reduction techniques), it may ultimately be necessary to normalise the data. However, for the analysis presented here, I'd like to avoid this for as long as possible because keeping the results in \"real\" units makes them much easier to intepret from a physical perspective. Two possible alternatives for dealing with the stream size effect are:\n",
     "\n",
     "  1. If the relationhsip between stream size and ecology is well established, we should use this relationship (e.g. from the literature) to remove the effect from *both* the flow and ecology datasets. <br><br>\n",
     "  \n",
@@ -67,15 +67,15 @@
     "\n",
     "## 3. Analysis options\n",
     "\n",
-    "We have a lot of explanatory variables and also many possible choices for the ecological response. Exploring all the possible combinations, as well as considering a range of statistical methods, will therefore not be easy. A fairly obvious place to start with data like these is with Multiple Linear Regression (MLR), but there are still several choices to be made. Options include:\n",
+    "We have a lot of explanatory variables, and also many possible choices for the ecological response. Exploring all possible combinations, as well as considering a range of statistical methods, will therefore not be easy. A fairly obvious place to start is with Multiple Linear Regression (MLR), but there are still several choices to be made. Options include:\n",
     "\n",
-    "  1. Pick a single response variable and explore the relationships with (sub-sets of) the explanatory variables. <br><br>\n",
+    "  1. Pick a single response variable and explore the relationships with (subsets of) the explanatory variables. <br><br>\n",
     "  \n",
     "  2. Aggregate the response variables (e.g. using PCA, NMDS etc.) and use MLR to explore the relationships with the explanatory variables. <br><br>\n",
     "  \n",
-    "  3. Aggregate both response and explanatory variables (e.g. using PCA), and then perform MLR on the results in a comparatively low dimensional space.\n",
+    "  3. Aggregate both response and explanatory variables (e.g. using PCA), and then perform MLR on the results in a reduced dimensional space.\n",
     "\n",
-    "With so many possible variables, aggregation techniques like PCA are certainly appealing, but they have the significant drawback of making the results much more difficult to interpret in a meaningful way. Although fiddly, **option 1 therefore seems like a good place to start**, as at least the output should have a reasonably straightforward physical interpretation.\n",
+    "With so many possible variables, aggregation techniques like PCA are certainly appealing, but they have the significant drawback of making the results much more difficult to interpret in a meaningful way. Although fiddly, **option 1 therefore seems like the best place to start**, as at least the output should have a reasonably straightforward physical interpretation.\n",
     "\n",
     "Some other alternatives metioned in [Daniel Herring's 2006 \"cook book\"](http://download.springer.com/static/pdf/854/art%253A10.1007%252Fs10750-006-0087-2.pdf?originUrl=http%3A%2F%2Flink.springer.com%2Farticle%2F10.1007%2Fs10750-006-0087-2&token2=exp=1473059931~acl=%2Fstatic%2Fpdf%2F854%2Fart%25253A10.1007%25252Fs10750-006-0087-2.pdf%3ForiginUrl%3Dhttp%253A%252F%252Flink.springer.com%252Farticle%252F10.1007%252Fs10750-006-0087-2*~hmac=e92f98416c263ded9ab852f7026e92dfcf6bca0af5a2c91974548c38f72fa0f1) include [Redundancy Analysis (RDA)](http://mb3is.megx.net/gustame/constrained-analyses/rda) and [Canonical Constrained Correspondance (CCA)](https://sites.google.com/site/mb3gustame/constrained-analyses/cca). I've not come across these before, but they seem to be popular among ecologists when analysing data of this kind. They also appear to be implemented [sci-kit-bio](http://scikit-bio.org/docs/0.4.1/generated/skbio.stats.ordination.html#module-skbio.stats.ordination), so perhaps this is something to return to later if there's time?\n",
     "\n",
@@ -198,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This matrix provides an interesting view of the data, and essentially summarises the more detailed distribution-based descriptions in the [previous notebook](http://nbviewer.jupyter.org/url/www.googledrive.com/host/0BximeC_RweaeVkYteXFqNE1XWXc/ecoreg_prelim_analysis.ipynb). Most of the relationships are pretty obvious (e.g. decreasing nutrient concentrations with increasing latitude), but others are more interesting. For example, metrics such as the number of taxa, the Shannon-Wei Index, Eveness, the German Saprobic Index and even the proportion of burrowers/borers all seem positively correlated with nurients. In contrast, \"abundance\" seems largely uncorrelated with nutrient concentrations.\n",
+    "This matrix provides an interesting view of the data, and essentially summarises the more detailed distribution-based descriptions in the [previous notebook](http://nbviewer.jupyter.org/github/JamesSample/ECOREG/blob/master/ecoreg_prelim_analysis.ipynb). Most of the relationships are pretty obvious (e.g. decreasing nutrient concentrations with increasing latitude), but others are more interesting. For example, metrics such as the number of taxa, the Shannon-Wei Index, Eveness, the German Saprobic Index and even the proportion of burrowers/borers all seem positively correlated with nurients. In contrast, \"abundance\" seems largely uncorrelated with nutrient concentrations.\n",
     "\n",
     "### 5.2. MZB: all metrics, 1 year before sampling"
    ]
@@ -451,7 +451,7 @@
     "\n",
     "## 6. Multiple linear regression\n",
     "\n",
-    "With the above matrices in mind, it's time to try some MLR. This will need doing carefully: it looks as though we have a lot of **collinear** predictors, so some kind of **penalised regression/regularisation** is likely to be appropriate. I'm no expert on this topic, but the sections below provide a brief overview.\n",
+    "With the above matrices in mind, it's time to try some MLR. This will need doing carefully: from the matrices above, it looks as though we have a lot of **collinear** predictors, so some kind of **penalised regression/regularisation** is likely to be appropriate. I'm no expert on this topic, but the sections below provide a brief overview.\n",
     "\n",
     "### 6.1. Norms\n",
     "\n",
@@ -481,7 +481,7 @@
     "\n",
     "In two dimensions, the difference between $L_1$ and $L_2$ norms can be illustrated as shown below:\n",
     "\n",
-    "<img src=\"https://www.googledrive.com/host/0BximeC_RweaeVkYteXFqNE1XWXc/norms.png\" alt=\"norms\" width=\"500\">\n",
+    "<img src=\"https://github.com/JamesSample/ECOREG/blob/master/Images/norms.png?raw=true\" alt=\"norms\" width=\"500\">\n",
     "\n",
     "The length of vector $a = (4, 3)$ using the $L_1$ norm is $(4 + 3) = 7$, whereas using the $L_2$ norm it's $\\sqrt {(4^2 + 3^2)} = 5$. The $L_1$ norm is called the \"Manhatten distance\" because Manhatten streets are laid out on a grid, so the $L_1$ norm gives the driving distance between locations, whereas the $L_2$ norm gives the distance \"as the crow flies\".\n",
     "\n",
@@ -656,11 +656,11 @@
    "source": [
     "## 7. Results\n",
     "\n",
-    "I'll begin by looking at the PB data as we have more sites available (65 versus 61 for MZB) and there are also fewer ecological response variables to choose from. The **abundance** metrics in the PB dataset need handling with caution, because they're originally based on a categorical scale from 1 to 5, which Susi has cubed in order to give more meaningful \"continuous\" values. To keep things as straightforward as possible, I'll avoid these scores for now and instead start off by trying to model **total species richness**.\n",
+    "I'll begin by looking at the PB data as we have more sites available (65 versus 61 for MZB) and there are also fewer ecological response variables to choose from. The **abundance** metrics in the PB dataset need handling with caution, because they were originally based on a categorical scale from 1 to 5, which Susi has cubed in order to give more meaningful \"continuous\" values. To keep things as straightforward as possible, I'll avoid these scores for now and instead start off by trying to model **total species richness**.\n",
     "\n",
     "### 7.1. PB richness against water chemistry\n",
     "\n",
-    "Let's begin by attempting to predict PB richness as a linear combination of just water chemistry parameters. This shouldn't bee too complicated, so we can start with a basic OLS regression scheme."
+    "Let's begin by attempting to predict PB richness as a linear combination of just water chemistry parameters. This shouldn't be too complicated, so we can start with a basic OLS regression scheme."
    ]
   },
   {
@@ -1607,7 +1607,7 @@
    "source": [
     "The cross-validation $r^2$ is still poor ($-3$), but it's dramatically better than the OLS result. The superficial calibration $r^2$ is slightly worse, but this isn't a bad thing as it means the model is fitting less of the noise. The coefficients are also much smaller than before, which illustrates the effect of the $L_2$ penalty. Note, however, that the coefficients are still all insignificant. \n",
     "\n",
-    "Looking at the top plot above, the results here are actually similar to those from the chemistry-only regression we started with: the model can fit the variability in the German data, but not at the Norwegian sites. This is surprising, because we've added a very large number of additional hydrological parameters, which don't seem to be having and effect. In fact, **the $L_2$ penalised model using all possible explanatory vaiables has very similar performance (and even parameters) to the chemistry-only model**. This implies the hydrological parameters are providing essentially no ecologically relevant information - the model is simply falling back to predicting the German PB richness based on water chemistry and failing to reproduce the Norwegian variability.\n",
+    "Looking at the top plot above, the results here are actually similar to those from the chemistry-only regression we started with: the model can fit the variability in the German data, but not at the Norwegian sites. This is surprising, because we've added a very large number of additional hydrological parameters, which don't seem to be having any effect. In fact, **the $L_2$ penalised model using all possible explanatory vaiables has very similar performance (and even parameters) to the chemistry-only model**. This implies the hydrological parameters are providing essentially no ecologically relevant information - the model is simply falling back to predicting the German PB richness based on water chemistry and failing to reproduce the Norwegian variability.\n",
     "\n",
     "How robust is this result? Let's try skip Lasso regression and go stright to Elastic Net, which incorporates Lasso anyway as an extreme case.\n",
     "\n",
@@ -1983,9 +1983,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the cross-validation $r^2$, the elastic net approach has achieved a slight improvement compared to ridge regression, but it's still not a good model. In the optimum parameter set, the $L_1$ ration has been set to 0.5, meaning that the $L_1$ and $L_2$ penalties have both been assigned equal weight. The imfluence of the $L_1$ penalty is also clearly visible - as expected, many of the model coefficients have been set to zero (no just made small), which emphasisies the \"feature selection\" component offered by this regression scheme. \n",
+    "Based on the cross-validation $r^2$, the elastic net approach has achieved a slight improvement compared to ridge regression, but it's still not a good model. In the optimum parameter set, the $L_1$ ratio has been set to 0.5, meaning that the $L_1$ and $L_2$ penalties have both been assigned equal weight. The influence of the $L_1$ penalty is also clearly visible - as expected, many of the model coefficients have been set to zero (not just made small), which emphasisies the \"feature selection\" component offered by this regression scheme. \n",
     "\n",
-    "The only coefficient with statistical significance is conductivity and its parameter value - and the overall model performance - are not dramatically different to the results using chemistry variables alone. This is strongly suggesting that my hydrological indicators have no explanatory power and we should perhaps try some different metrics.\n",
+    "The only coefficient with statistical significance is conductivity and its parameter value - and the overall model performance - are not dramatically different to the results using chemistry variables alone. This is strongly suggesting that my hydrological indicators have no explanatory power and we should therefore try some different metrics.\n",
     "\n",
     "As a last confirmation step, let's try a model using *only* the hydrological indicators as the explanatory variables. We'll go straight to the elastic net method as I'm pretty sure OLS won't work here.\n",
     "\n",
@@ -2328,15 +2328,15 @@
     "\n",
     "## 8. Summary\n",
     "\n",
-    " * I've calculated some new hydrological metrics which are more relevant to our data than those calculated using the IHA approach. <br><br>\n",
+    " * I've calculated some new hydrological metrics which are more relevant to our data than those derived using the IHA approach. <br><br>\n",
     " \n",
     " * PB species richness at the German sites can be at least partially explained in terms of water chemistry, but in Norway there is considerable variation in species richness and comparatively little variation in chemistry. <br><br>\n",
     " \n",
     " * The PB diversity in Norway must therefore be controlled by other factors. The most obvious candidate would be hydrology but, unfortunately, the Norwegian PB don't seem very impressed with my choice of hydrological indicators so far. <br><br>\n",
     " \n",
-    " * Regularised multiple linear regression offers quite a promising way of investigating this kind of data, but before going any further it looks as though we should revisit the hydrological indicators themselves to see if we canm identify some quantities that are more relevant. <br><br>\n",
+    " * Regularised multiple linear regression offers a promising way of investigating this kind of data, but before going any further it looks as though we should revisit the hydrological indicators themselves to see if we can identify some quantities that are more relevant. <br><br>\n",
     " \n",
-    " * For my next try, I'm tempted to focus on the hydrology immediately prior to sampling - perhaps looking at what's happened over the previous two to three months? With a bit of luck, these statistics will be more driectly relevant to the PB, so we might be able to detect some more interesting patterns and relationships. Maybe..."
+    " * For my next try, I'm tempted to focus on the hydrology **immediately prior** to sampling - perhaps looking at what's happened over the previous two to three months? With a bit of luck, these statistics will be more driectly relevant to the PB, so we might be able to detect some more interesting patterns and relationships. Maybe..."
    ]
   }
  ],
