Adding comment re. gradients

--- a/ecoreg_prelim_analysis2.ipynb
+++ b/ecoreg_prelim_analysis2.ipynb
@@ -848,6 +848,8 @@
    "source": [
     "In general, these plots reinforce the idea that, overall, Norwegian water chemistry is much less variable than in Germany. Nevertheless, Norwegian PB species richness is quite diverse, so **a model incorporating water chemistry variables alone cannot explain the patterns in the Norwegian data**.\n",
     "\n",
+    "It's also worth noting that the two parameters with statistical significance (TP and conductivity) in the model above are the ones with the greatest variability in the German dataset. This may be suggesting that we **don't have a sufficient gradient** in the other parameters to be able to draw meaningful conclusions.\n",
+    "\n",
     "Let's try a more complicated approach, throwing in all the chemistry and hydrology variables at once. I expect this will fail pretty miserably using OLS, but let's try...\n",
     "\n",
     "### 7.2. PB richness against water chemistry and hydrology (OLS)"
