--- a/ecoreg_full_analysis_1.ipynb
+++ b/ecoreg_full_analysis_1.ipynb
@@ -3392,9 +3392,9 @@
     "\n",
     " * Test for differences in PB assemblages between regulated and unregulated sites in Germany. <br><br>\n",
     "\n",
-    " * For Germany, test whether regulated rivers have fewer tax and genera. <br><br>\n",
+    " * For Germany, test whether regulated rivers have fewer MZB tax and genera. <br><br>\n",
     " \n",
-    " * For Norway, test whether regulated sites have *greater* abundance and diversity (and compare with the results from Germany - see above). <br><br>\n",
+    " * For Norway, test whether regulated sites have *greater* abundance and diversity of MZB (and compare with the results from Germany - see above). <br><br>\n",
     " \n",
     " * Test whether regulated sites in Norway have a greater proportion of sessile species and active filter feeders, but fewer swimmers and divers. <br><br>\n",
     " \n",
